<resources>
    <string name="app_name">AppSof</string>
    <string name="title">scanner</string>
    <string name="scan_tip">Coloca el código dentro del marco.</string>
    <string name="no_code_tip">No se detectó ningún código.</string>
    <string name="confirm">OK</string>
    <string name="light">Toca para más luz</string>
    <string name="light_off">Apaga la luz</string>
    <string name="default_view_decoe">Modo de vista predeterminado</string>
    <string name="photo_decode">Decodificar foto</string>
    <string name="customized_view_decode">Modo de vista personalizado</string>
    <string name="bitmap_api_decode">Modo de mapa de bits</string>
    <string name="multiProcessor_api_syn_decode">Modo síncrono de API multiprocesador</string>
    <string name="multiProcessor_api_asyn_decode">Modo asíncrono de API multiprocesador</string>
    <string name="generate_QR_code">Generar código QR</string>
    <string name="barcode_width">Ancho del código de barras:</string>
    <string name="barcode_height">Altura del código de barras:</string>
    <string name="barcode_type">Escribe:</string>
    <string name="barcode_color">Color:</string>
    <string name="barcode_backgroundcolor">Fondo:</string>
    <string name="barcode_margin">Margen:</string>
    <string name="width_value">700</string>
    <string name="height_value">700</string>
    <string name="generate_barcode">Generar código de barras</string>
    <string name="save_barcode">Guardar código de barras</string>
    <string name="barcode_content">Contenido del código de barras:</string>
    <string name="content_detail">El kit de escaneo HUAWEI escanea y analiza todos los principales códigos de barras 1D y 2D, lo que lo ayuda a crear rápidamente funciones de escaneo de códigos de barras en sus aplicaciones.</string>
    <string name="content_detailb">MultiCodeDecoder：Decodifica múltiples códigos</string>
    <string name="title_result">Resultado</string>
    <string name="code_format">Formato de código</string>
    <string name="result_type">Tipo de resultado</string>
    <string name="result_content">Resultado</string>
    <string name="copy">Copiar</string>
    <string name="add_contact">Agregar contacto</string>
    <string name="connect_network">Conectar a la red</string>
    <string name="add_calendar">Añadir al calendario</string>
    <string name="send_sms">Enviar Mensaje</string>
    <string name="call">Llamar</string>
    <string name="nivigation">Navegación</string>
    <string name="send_email">Enviar correo electrónico</string>
    <string name="copy_toast">El contenido ha sido copiado</string>
    <string name="open_browser">Abierta en el navegador</string>
    <string name="mwc_title">kit de escaneo HMS Core</string>
    <string name="mwc_subject">Acerca del kit de escaneo</string>
    <string name="mwc_detail">Escáner integrado en la aplicación para códigos de barras 1D y 2D conecta su aplicación con escenarios del mundo real</string>
    <string name="scan_showresult">Scan results will show on screen</string>
</resources>
